# TempestRenderer

./: .gitignore  CMakeLists.txt  Contrib.txt  INSTALL.txt  LICENSE-NOTES.txt  Tempest.kdev4
samples/: CMakeLists.txt  cloth-simulation.cc  debug-gizmos.cc  object-paint.cu  virtual-gonioreflectometer.cc
src/: CMakeLists.txt
src/compute/: compute-definitions.cc  compute-texture.cc  ray-tracing-cuda-system.cc  ray-tracing.cu
src/debug/: fps-counter.cc
src/graphics/: cube-map.cc  equirectangular-map.cc  os-window-w32.cc  os-window-x11.cc  rendering-convenience.cc  rendering-definitions.cc  scene-rasterizer-system.cc  scene-rasterizer.cc  texture.cc
src/graphics/direct3d-backend/: dx-backend.cc  dx-library.cc
src/graphics/opengl-backend/: gl-backend.cc  gl-buffer.cc  gl-command-buffer.cc  gl-compiler.cc  gl-convenience.cc  gl-framebuffer.cc  gl-input-layout.cc  gl-io-command-buffer.cc  gl-library.cc  gl-shader.cc  gl-state-object.cc  gl-storage.cc  gl-texture.cc  gl-window-w32.cc  gl-window-x11.cc
src/graphics/ray-tracing/: ray-tracing.cc
src/image/: btf.cc  eps-draw.cc  exr-image.cc  image-utils.cc  image.cc  png-image.cc  tga-image.cc
src/input/: controller-linux.cc  controller-xinput.cc
src/math/: dual-quaternion.cc  hdr.cc  intersect.cc  matrix-variadic.cc  matrix4.cc  quaternion.cc  shapes.cc  spectrum-table.hh  spectrum.cc  triangle.cc
src/mesh/: essbvh2.cc  lbvh2.cc  obj-loader-driver.cc  obj-loader-parser.cc  obj-loader.cc  obj-loader.l  obj-loader.y  obj-mtl-loader.l  obj-mtl-loader.y  obj-mtl-parser.cc  octree.cc  sslbvh2.cc
src/parser/: ast.cc  driver-base.cpp  lalr1-tge-ext.cc  tempest-shader.m4
src/qt/: color-picker.cc  tempest-widget.cc
src/shader/: ast-driver-parse.impl.cc  dx-shader-generator.cc  gl-shader-generator.cc  shader-ast.cc  shader-common.cc  shader-convert-common.cc  shader-driver.cc  shader-lexer.l  shader-parser.cc  shader-parser.y
src/texture/: texture-table.cc
src/utils/: assert.cc  file-system.cc  interleave-vertices.cc  library.cc  logging.cc  memory.cc  misc-w32.cc  parse-command-line.cc  profiler.cc  system.cc  tempest-main.cc  threads.cc  video-encode.cc  viewer.cc
src/volume/: volume.cc
tests/: CMakeLists.txt
tests/benchmark/: pseudo-volume-performance-test.cu  sin-cos-test.cc
tests/compute/: ray-tracing-cuda-fill-test.cc
tests/graphics/: CMakeLists.txt
tests/graphics/copy-data/: CMakeLists.txt  copy-data-test.cc  copy-data.cc
tests/graphics/cornell-box/: cornell-box-test.cc
tests/graphics/draw-fps-counter/: draw-fps-counter-test.cc
tests/graphics/draw-quad/: CMakeLists.txt  draw-quad-test.cc  draw-quad.cc  test.tfx
tests/graphics/draw-quad-texture/: CMakeLists.txt  Mandrill.tga  draw-quad-texture-test.cc  draw-quad-texture.cc  lena.dds  test.tfx
tests/graphics/draw-quad-texture-table/: CMakeLists.txt  draw-quad-texture-table-test.cc  draw-quad-texture-table.cc  test.tfx
tests/graphics/draw-render-target/: draw-render-target-test.cc
tests/graphics/draw-text/: draw-text-test.cc
tests/graphics/interpolation/: alcantara_center_right_sggx_basis.exr  cube-map-interpolation-test.cu  interpolation-test.cu
tests/graphics/mis/: mis-test.cc
tests/graphics/models/: ashikhmin-shirley-test.cc  (+4 more)
tests/image/: image-test.cc  scratch-texture-test.cc
tests/input/: CMakeLists.txt
tests/math/: basis-test.cc  curve-fitting-test.cu  curves-test.cc  delaunay-triangulation-test.cc  fitting-test.cc  function-test.cc  intersect-line-circle-test.cc  intersect-rect-circle-test.cc  intersect-test.cc  matrix-test.cc  quaternion-test.cc  rectangle-split-test.cc  sampling-test.cc  shapes-test.cc  spectrum-test.cc  spring-test.cc  triangle-test.cc  trigonometry-test.cc
tests/mesh/: bvh-test.cc  consistent-normals-test.cc  mesh-render-test.cc  octree-test.cc
tests/procedural/: velvet-weave-test.cc
tests/shader/: CMakeLists.txt
tests/utils/: CMakeLists.txt
tests/volume/: CMakeLists.txt
tools/: CMakeLists.txt
tools/btf-extract-normal-map/: CMakeLists.txt  btf-extract-normal-map.cc
tools/btf-lobe-diagram-tool/: CMakeLists.txt  btf-lobe-diagram-tool.cc
tools/btf-reflectance-slice/: CMakeLists.txt  btf-reflectance-slice.cc
tools/btf-slice/: CMakeLists.txt  btf-slice.cc
tools/btf-to-ambient-occlusion/: CMakeLists.txt  btf-to-ambient-occlusion.cc
tools/btf-viewer/: CMakeLists.txt  btf-viewer.cc
tools/color-code-tool/: CMakeLists.txt  color-code-tool.cc
tools/convert-volume/: CMakeLists.txt  convert-volume.cc
tools/env-map-tool/: CMakeLists.txt  env-map-tool.cc
tools/exr-viewer/: CMakeLists.txt  exr-view.cc  exr-view.hh  exr-viewer.cc  exr-viewer.ui
tools/fabrics-tester/: CMakeLists.txt  fabrics-tester.cc
tools/image-analyze/: CMakeLists.txt  image-analyze.cc
tools/image-combine/: CMakeLists.txt  image-combine.cc
tools/image-convert/: CMakeLists.txt  image-convert.cc
tools/image-histogram/: CMakeLists.txt  image-histogram.cc
tools/image-to-movie/: CMakeLists.txt  image-to-movie.cc
tools/material-manipulation/: CMakeLists.txt  image-draw.tfx  material-manipulation-main.cc  material-manipulation.cu  material-manipulation.hh  material-manipulation.ui
tools/mesh-debug-tool/: CMakeLists.txt  mesh-debug-tool.cc
tools/quaternion-texture-tool/: CMakeLists.txt  quaternion-texture-tool.cc
tools/shader-compiler/: CMakeLists.txt  shader-compiler.cc
tools/shading-evaluation/: CMakeLists.txt  background.tfx  color-picker.cc  color-picker.hh  shading-evaluation.cc  shading-evaluation.ui  shading.tfx
tools/svbrdf-error-tool/: CMakeLists.txt  svbrdf-error-tool.cc
tools/svbrdf-fitting/: CMakeLists.txt  svbrdf-display-distribution-map.cc  svbrdf-display-single.cc  svbrdf-fitting-pipeline.cc  svbrdf-fitting.bat  svbrdf-fitting.cc  svbrdf-fitting.hh  svbrdf-fitting.job.in  svbrdf-lsq-fitting-internal.hh  svbrdf-lsq-fitting-setup.cc  svbrdf-lsq-fitting.cu
tools/svbrdf-postprocess/: CMakeLists.txt  svbrdf-postprocess.cc
tools/svbrdf-viewer/: CMakeLists.txt  svbrdf-viewer-cuda.cu  svbrdf-viewer.cc  svbrdf-viewer.hh
tools/texture-generate/: CMakeLists.txt  texture-generate.cc
(+1637 files in other folders)
